--- a/frontend/src/app/website/pages/dashboard/dashboard.component.html
+++ b/frontend/src/app/website/pages/dashboard/dashboard.component.html
@@ -268,8 +268,8 @@
     <div class="container aos-init " data-aos="fade-up">
 
       <div class="section-header">
-        <h2>Testimonials</h2>
-        <p>Lorem ipsum dolor sit amet</p>
+        <h2>Co o nás říkají naši zákazníci:</h2>
+        <p>Podívejte se na názory našich zákazníků, kteří náš systém používají</p>
       </div>
 
       <div class="slides-3 swiper swiper-initialized swiper-horizontal swiper-pointer-events swiper-backface-hidden aos-init " data-aos="fade-up" data-aos-delay="100">
@@ -277,10 +277,10 @@
           <div class="testimonial-wrap">
             <div class="testimonial-item">
               <div class="d-flex align-items-center info-box">
-                <img src="./it web template_files/testimonial-2.jpg" class="testimonial-img flex-shrink-0" alt="">
+                <img src="/assets/website/testimonial-2.jpg" class="testimonial-img flex-shrink-0" alt="">
                 <div>
-                  <h3>Afa Rose</h3>
-                  <h4>Web Designer</h4>
+                  <h3>Pavel K.</h3>
+                  <h4>Zákazník</h4>
                   <div class="stars">
                     <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                   </div>
@@ -288,8 +288,7 @@
               </div>
               <p>
                 <i class="bi bi-quote quote-icon-left"></i>
-                Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus.
-                Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam.
+                Tento systém je naprostá pecka! Jako někdo, kdo nemá programátorské dovednosti, jsem byl ohromen tím, jak snadno jsem mohl vytvořit profesionálně vypadající web během pár hodin. Drag&drop funkce je neuvěřitelně intuitivní a umožňuje mi plnou kontrolu nad vzhledem i funkcionalitou mého webu.
                 <i class="bi bi-quote quote-icon-right"></i>
               </p>
             </div>
@@ -298,10 +297,10 @@
           <div class="testimonial-wrap">
             <div class="testimonial-item">
               <div class="d-flex align-items-center info-box">
-                <img src="./it web template_files/testimonial-3.jpg" class="testimonial-img flex-shrink-0" alt="">
+                <img src="/assets/website/testimonial-3.jpg" class="testimonial-img flex-shrink-0" alt="">
                 <div>
-                  <h3>Keena Lara</h3>
-                  <h4>Store Owner</h4>
+                  <h3>Eva M.</h3>
+                  <h4>Zákazník</h4>
                   <div class="stars">
                     <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                   </div>
@@ -309,8 +308,7 @@
               </div>
               <p>
                 <i class="bi bi-quote quote-icon-left"></i>
-                Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus.
-                Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam.
+                Drag&drop systém mě zachránil! Potřebovala jsem rychle spustit web pro svůj nový projekt a díky tomuto nástroji jsem to zvládla bez jakéhokoliv stresu. Šablony jsou nádherné, a přestože jsem začátečník, můj web vypadá jako od profesionála.
                 <i class="bi bi-quote quote-icon-right"></i>
               </p>
             </div>
@@ -319,10 +317,10 @@
           <div class="testimonial-wrap">
             <div class="testimonial-item">
               <div class="d-flex align-items-center info-box">
-                <img src="./it web template_files/testimonial-4.jpg" class="testimonial-img flex-shrink-0" alt="">
+                <img src="/assets/website/testimonial-4.jpg" class="testimonial-img flex-shrink-0" alt="">
                 <div>
-                  <h3>Fizzi Brandon</h3>
-                  <h4>Freelancer</h4>
+                  <h3>Tomáš V</h3>
+                  <h4>Zákazník</h4>
                   <div class="stars">
                     <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                   </div>
@@ -330,8 +328,7 @@
               </div>
               <p>
                 <i class="bi bi-quote quote-icon-left"></i>
-                Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus.
-                Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam.
+                Skvělý nástroj pro kohokoliv, kdo chce vytvořit web bez zdlouhavého učení kódování. Jednoduše jsem si vybral prvky, které jsem potřeboval, a během několika kliknutí jsem měl hotovo. Doporučuji všem, kdo hledají rychlé a efektivní řešení pro tvorbu webových stránek.“
                 <i class="bi bi-quote quote-icon-right"></i>
               </p>
             </div>
@@ -342,10 +339,10 @@
             <div class="testimonial-wrap">
               <div class="testimonial-item">
                 <div class="d-flex align-items-center info-box">
-                  <img src="./it web template_files/testimonial-1.jpg" class="testimonial-img flex-shrink-0" alt="">
+                  <img src="/assets/website/testimonial-1.jpg" class="testimonial-img flex-shrink-0" alt="">
                   <div>
-                    <h3>Jhone Doe</h3>
-                    <h4>CFO</h4>
+                    <h3>Jan R</h3>
+                    <h4>Zákazník</h4>
                     <div class="stars">
                       <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                     </div>
@@ -353,8 +350,7 @@
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus.
-                  Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam.
+                  Nikdy jsem si nemyslel, že bych byl schopen vytvořit si vlastní web, ale tento drag&drop systém mi to umožnil. Ovládání je neuvěřitelně jednoduché a intuitivní, což mi umožnilo dosáhnout přesně toho, co jsem chtěl. Můj web teď vypadá skvěle a funguje bezchybně!
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
@@ -365,10 +361,10 @@
             <div class="testimonial-wrap">
               <div class="testimonial-item">
                 <div class="d-flex align-items-center info-box">
-                  <img src="./it web template_files/testimonial-2.jpg" class="testimonial-img flex-shrink-0" alt="">
+                  <img src="/assets/website/testimonial-2.jpg" class="testimonial-img flex-shrink-0" alt="">
                   <div>
-                    <h3>Afa Rose</h3>
-                    <h4>Web Designer</h4>
+                    <h3>Martina L.</h3>
+                    <h4>Zákazník</h4>
                     <div class="stars">
                       <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                     </div>
@@ -376,8 +372,7 @@
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus.
-                  Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam.
+                  Tento systém je doslova revoluční! Jako freelancer jsem potřebovala nástroj, který mi umožní rychle a efektivně tvořit weby pro mé klienty. Funkce drag&drop je neuvěřitelně přehledná a intuitivní, což mi šetří spoustu času. Klienti jsou spokojení a já taky.
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
@@ -388,10 +383,10 @@
             <div class="testimonial-wrap">
               <div class="testimonial-item">
                 <div class="d-flex align-items-center info-box">
-                  <img src="./it web template_files/testimonial-3.jpg" class="testimonial-img flex-shrink-0" alt="">
+                  <img src="/assets/website/testimonial-3.jpg" class="testimonial-img flex-shrink-0" alt="">
                   <div>
-                    <h3>Keena Lara</h3>
-                    <h4>Store Owner</h4>
+                    <h3>Karlos B.</h3>
+                    <h4>Zákazník</h4>
                     <div class="stars">
                       <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                     </div>
@@ -399,8 +394,7 @@
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus.
-                  Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam.
+                  Tento systém mi ušetřil spoustu peněz a času. Nemusím už platit drahé vývojáře ani ztrácet hodiny nad učením se složitých nástrojů. Vše, co potřebuji, mám na dosah ruky a výsledky jsou úžasné!
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
@@ -411,10 +405,10 @@
             <div class="testimonial-wrap">
               <div class="testimonial-item">
                 <div class="d-flex align-items-center info-box">
-                  <img src="./it web template_files/testimonial-4.jpg" class="testimonial-img flex-shrink-0" alt="">
+                  <img src="/assets/website/testimonial-4.jpg" class="testimonial-img flex-shrink-0" alt="">
                   <div>
-                    <h3>Fizzi Brandon</h3>
-                    <h4>Freelancer</h4>
+                    <h3>Petra Z.</h3>
+                    <h4>Zákazník</h4>
                     <div class="stars">
                       <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                     </div>
@@ -422,8 +416,7 @@
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus.
-                  Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam.
+                  Jsem nadšená z toho, jak jednoduché je s tímto nástrojem pracovat. Všechny prvky jsou přesně tam, kde bych je očekávalá, a systém je neuvěřitelně flexibilní. Můj nový web je online za rekordně krátký čas a vypadá fantasticky.
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
@@ -433,10 +426,10 @@
             <div class="testimonial-wrap">
               <div class="testimonial-item">
                 <div class="d-flex align-items-center info-box">
-                  <img src="./it web template_files/testimonial-1.jpg" class="testimonial-img flex-shrink-0" alt="">
+                  <img src="/assets/website/testimonial-1.jpg" class="testimonial-img flex-shrink-0" alt="">
                   <div>
-                    <h3>Jhone Doe</h3>
-                    <h4>CFO</h4>
+                    <h3>Alena H.</h3>
+                    <h4>Zákazník</h4>
                     <div class="stars">
                       <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                     </div>
@@ -444,8 +437,7 @@
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus.
-                  Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam.
+                  Předtím jsem nikdy netvořila webové stránky, ale s tímto nástrojem jsem to zvládla na jedničku. Drag&drop funkce je intuitivní a nabízí spoustu možností, jak si přizpůsobit web podle svých představ. Teď můžu s hrdostí prezentovat svůj projekt online.
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
@@ -454,10 +446,10 @@
             <div class="testimonial-wrap">
               <div class="testimonial-item">
                 <div class="d-flex align-items-center info-box">
-                  <img src="./it web template_files/testimonial-2.jpg" class="testimonial-img flex-shrink-0" alt="">
+                  <img src="/assets/website/testimonial-2.jpg" class="testimonial-img flex-shrink-0" alt="">
                   <div>
-                    <h3>Afa Rose</h3>
-                    <h4>Web Designer</h4>
+                    <h3>Filip J.</h3>
+                    <h4>Zákazník</h4>
                     <div class="stars">
                       <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                     </div>
@@ -465,8 +457,7 @@
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus.
-                  Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam.
+                  Pro někoho, kdo potřebuje rychle vytvořit funkční a moderní web, je tento systém neocenitelný. Rychlost, s jakou jsem mohl svůj nápad převést do reality, je ohromující. Systém mi ušetřil hodiny práce a výsledek předčil má očekávání.
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
@@ -475,10 +466,10 @@
             <div class="testimonial-wrap">
               <div class="testimonial-item">
                 <div class="d-flex align-items-center info-box">
-                  <img src="./it web template_files/testimonial-3.jpg" class="testimonial-img flex-shrink-0" alt="">
+                  <img src="/assets/website/testimonial-3.jpg" class="testimonial-img flex-shrink-0" alt="">
                   <div>
-                    <h3>Keena Lara</h3>
-                    <h4>Store Owner</h4>
+                    <h3>Veronika S.</h3>
+                    <h4>Zákazník</h4>
                     <div class="stars">
                       <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                     </div>
@@ -486,8 +477,7 @@
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus.
-                  Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam.
+                  Konečně jsem našla nástroj, který mi dává svobodu tvořit bez omezení. Drag&drop rozhraní je úžasně jednoduché na používání, a přesto nabízí ohromné množství funkcí a designových možností. Jsem nadšená z toho, jak můj nový web vypadá a funguje!
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
