--- a/frontend/src/app/website/pages/dashboard/dashboard.component.html
+++ b/frontend/src/app/website/pages/dashboard/dashboard.component.html
@@ -534,7 +534,7 @@
     <div class="container aos-init " data-aos="fade-up">
       <div class="section-header">
         <h2>FAQ's</h2>
-        <p>Lorem ipsum dolor sit amet</p>
+        <p>Často kladené dotazy.</p>
       </div>
       <div class="row gy-4">
         <div class="col-lg-12">
@@ -543,18 +543,13 @@
               <h3 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-1">
                   <span class="num"><i class="bi bi-arrow-right-circle-fill"></i></span>
-                  What is web domain and hosting?
+                  Jak napojit vaši doménu na váš nový web?
                 </button>
               </h3>
               <div id="faq-content-1" class="accordion-collapse collapse show" data-bs-parent="#faqlist">
                 <div class="accordion-body">
-                  Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
-                  magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum
-                  quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut
-                  labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum
-                  exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis
-                  autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur,
-                  vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+                  Je to jednoduché. Stačí v DNS nastavení vaší domény nastavt CNAME na hodnotu c1.netdropper.cz.
+                  Tím dojde k nasměrování vaší domény na náš server. Pokud nevíte, jak DNS u své domény nastavit, kontaktujte svého registrátora domény, který vám s úpravou poradí.
                 </div>
               </div>
             </div><!-- # Faq item-->
@@ -563,18 +558,12 @@
               <h3 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-2">
                   <span class="num"><i class="bi bi-arrow-right-circle-fill"></i></span>
-                  Which server is best for websites linux or windows?
+                  Musim si obstarat vlastní webhosting?
                 </button>
               </h3>
               <div id="faq-content-2" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                 <div class="accordion-body">
-                  Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
-                  magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum
-                  quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut
-                  labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum
-                  exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis
-                  autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur,
-                  vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+                  Nikoliv. Celý systém netdropper běží na našich serverech. Nemusíte se tak o provoz webhostingu vůbec starat.
                 </div>
               </div>
             </div><!-- # Faq item-->
@@ -583,18 +572,12 @@
               <h3 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-3">
                   <span class="num"><i class="bi bi-arrow-right-circle-fill"></i></span>
-                  Google cloud or Amazon server which one is best and fast?
+                  Mohu pod jedním účtem provozovat více webů?
                 </button>
               </h3>
               <div id="faq-content-3" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                 <div class="accordion-body">
-                  Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
-                  magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum
-                  quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut
-                  labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum
-                  exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis
-                  autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur,
-                  vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+                  Ano. Celý systém je navržen tak, že pod jedním účtem můžete spravovat více webů. Každý web může mít vlastní doménu. Za každý web navíc se nic nepřiplácí.
                 </div>
               </div>
             </div><!-- # Faq item-->
@@ -603,18 +586,12 @@
               <h3 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-4">
                   <span class="num"><i class="bi bi-arrow-right-circle-fill"></i></span>
-                  Why Organic SEO is important for all businesses?
+                  Bude se můj web správně zobrazovat na mobilním zařízení?
                 </button>
               </h3>
               <div id="faq-content-4" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                 <div class="accordion-body">
-                  Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
-                  magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum
-                  quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut
-                  labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum
-                  exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis
-                  autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur,
-                  vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+                  Veškěré webové stránky vytvořené v našem systému netdropper jsou plně respozivní. Nemusíte se tak bát, že se budou špatně zobrazovat v mobilním zařízení nebo tabletu.
                 </div>
               </div>
             </div><!-- # Faq item-->
@@ -632,9 +609,9 @@
     <div class="container text-center aos-init " data-aos="zoom-out">
       <div class="row gy-4">
         <div class="col-lg-12">
-          <h3>Let's Discuss your Projects</h3>
-          <p>We pride ourselves with our ability to perform and deliver results. Use the form below to discuss your project needs with our team, we will get back asap</p>
-          <a class="cta-btn" href="mailto:info@example.com">Conatct Us</a>
+          <h3><span class="logo"><span class="first">Net</span><span class="second-white">Dropper</span></span> je ta správná cesta pro váš nový web</h3>
+          <p>Zaregistrujte se a vyzkoušejte, jaké výhody náš systém přináší. Nemusíte nic platit. Můžete si tak vytvořit svůj vlastní web zdarma.</p>
+          <a href="{{systemInfoService.getAdminHostname()}}" class="btn-get-started mr-20 aos-init " data-aos="fade-up" data-aos-delay="800">Vytvořit web</a>
         </div>
       </div>
     </div>
@@ -642,84 +619,11 @@
   <!-- End Call To Action Section -->
 
 
-  <!--  Recent Blog Posts Section  -->
-  <section id="recent-posts" class="recent-posts sections-bg">
-    <div class="container aos-init " data-aos="fade-up">
-      <div class="section-header">
-        <h2>Blogs</h2>
-        <p>Lorem ipsum dolor sit amet</p>
-      </div>
-      <div class="row gy-4">
-        <div class="col-lg-4">
-          <article>
-            <div class="post-img">
-              <img src="./it web template_files/blog-1.jpg" alt="" class="img-fluid">
-            </div>
-            <p class="post-category">Domain &amp; Hosting</p>
-            <h2 class="title">
-              <a href="https://zrtechsolutions.com/demo/html/technoit/blog-details.html">How to host website on any hosting provider?</a>
-            </h2>
-            <div class="d-flex align-items-center">
-              <div class="post-meta">
-                <p class="post-author">William Bla</p>
-                <p class="post-date">
-                  <time datetime="2022-01-01">Feb 1, 2022</time>
-                </p>
-              </div>
-            </div>
-          </article>
-        </div><!-- End post list item -->
-
-        <div class="col-lg-4">
-          <article>
-            <div class="post-img">
-              <img src="./it web template_files/blog-2.jpg" alt="" class="img-fluid">
-            </div>
-            <p class="post-category">Advertisement</p>
-            <h2 class="title">
-              <a href="https://zrtechsolutions.com/demo/html/technoit/blog-details.html">How to create add on google adwords?</a>
-            </h2>
-            <div class="d-flex align-items-center">
-              <div class="post-meta">
-                <p class="post-author">Jobi Ret</p>
-                <p class="post-date">
-                  <time datetime="2022-01-01">Oct 5, 2022</time>
-                </p>
-              </div>
-            </div>
-          </article>
-        </div><!-- End post list item -->
-
-        <div class="col-lg-4">
-          <article>
-            <div class="post-img">
-              <img src="./it web template_files/blog-3.jpg" alt="" class="img-fluid">
-            </div>
-            <p class="post-category">Marketing</p>
-            <h2 class="title">
-              <a href="https://zrtechsolutions.com/demo/html/technoit/blog-details.html">What is digital marketing and why is important?</a>
-            </h2>
-            <div class="d-flex align-items-center">
-              <div class="post-meta">
-                <p class="post-author">Main Dow</p>
-                <p class="post-date">
-                  <time datetime="2022-01-01">Dec 22, 2022</time>
-                </p>
-              </div>
-            </div>
-          </article>
-        </div><!-- End post list item -->
-
-      </div><!-- End recent posts list -->
-
-    </div>
-  </section><!-- End Recent Blog Posts Section -->
-
   <!-- Start Contact Section -->
-  <div id="contact" class="contact-section section">
+  <section id="contact" class="contact-section section">
     <div class="section-header">
-      <h2>Contact Us</h2>
-      <p>Lorem ipsum dolor sit amet</p>
+      <h2>Kontaktujte nás</h2>
+      <p>Mate jakýkoliv dotaz? Napište nám:</p>
     </div>
     <div class="container">
       <div class="row">
@@ -729,18 +633,17 @@
               <div class="col-lg-12">
                 <div class="single-contact-info-box">
                   <div class="contact-info">
-                    <h6>Address:</h6>
-                    <p>11 West Town</p>
-                    <p>PBo 12345, United States</p>
+                    <h6>Adresa:</h6>
+                    <p>Pořežany 18</p>
+                    <p>Týn nad Vltavou 375 01</p>
                   </div>
                 </div>
               </div>
               <div class="col-lg-12">
                 <div class="single-contact-info-box">
                   <div class="contact-info">
-                    <h6>Phone:</h6>
-                    <p>+1 1234 56 789</p>
-                    <p>+1 1234 56 780</p>
+                    <h6>Telefon:</h6>
+                    <p>+420 732846087</p>
                   </div>
                 </div>
               </div>
@@ -748,8 +651,7 @@
                 <div class="single-contact-info-box">
                   <div class="contact-info">
                     <h6>Email:</h6>
-                    <p>info&#64;example.com</p>
-                    <p>email&#64;example.com</p>
+                    <p>dotaz&#64;netdropper.cz</p>
                   </div>
                 </div>
               </div>
@@ -759,47 +661,45 @@
         <div class="col-lg-8 col-md-12 aos-init " data-aos="fade-left">
           <div class="contact-form-box contact-form contact-form-3">
             <div class="form-container-box">
-              <form class="contact-form form" id="ajax-contact" method="post" action="https://zrtechsolutions.com/demo/html/technoit/assets/phpscripts/contact.php" novalidate="true">
-                <div class="controls">
-                  <div class="row">
-                    <div class="col-md-6">
-                      <div class="form-group form-input-box">
-                        <input type="text" class="form-control" id="name" name="name" placeholder="Name*" required="required" data-error="Name is required.">
-                        <div class="help-block with-errors"></div>
+              @if (!contactFormSend) {
+                <form [formGroup]="contactForm" (ngSubmit)="onSubmit()">
+                  <div class="controls">
+                    <div class="row">
+                      <div class="col-md-6">
+                        <div class="form-group form-input-box">
+                          <input appFormError type="text" class="form-control" formControlName="name" id="name" name="name" placeholder="Jméno*" required="required" data-error="Name is required.">
+                        </div>
                       </div>
-                    </div>
-                    <div class="col-md-6">
-                      <div class="form-group form-input-box">
-                        <input type="email" class="form-control" id="email" name="email" placeholder="Email*" required="required" data-error="Valid email is required.">
-                        <div class="help-block with-errors"></div>
+                      <div class="col-md-6">
+                        <div class="form-group form-input-box">
+                          <input appFormError type="email" class="form-control" formControlName="email" id="email" name="email" placeholder="Email*" required="required" data-error="Valid email is required.">
+                        </div>
                       </div>
-                    </div>
-                    <div class="col-md-12">
-                      <div class="form-group form-input-box">
-                        <input type="text" class="form-control" name="subject" placeholder="Subject" required="required">
+                      <div class="col-md-12">
+                        <div class="form-group form-input-box">
+                          <input appFormError type="text" class="form-control" formControlName="subject" name="subject" placeholder="Předmět*" required="required">
+                        </div>
                       </div>
-                    </div>
-                    <div class="col-12">
-                      <div class="form-group form-input-box">
-                        <textarea class="form-control" id="message" name="message" rows="7" placeholder="Write Your Message*" required="required" data-error="Please, leave us a message."></textarea>
-                        <div class="help-block with-errors"></div>
+                      <div class="col-12">
+                        <div class="form-group form-input-box">
+                          <textarea appFormError class="form-control" id="message" formControlName="message" name="message" rows="7" placeholder="Zpráva*" required="required" data-error="Please, leave us a message."></textarea>
+                        </div>
                       </div>
-                    </div>
-                    <div class="col-md-12">
-                      <button type="submit" data-text="Send Message" class="disabled">Send Message</button>
-                    </div>
-                    <div class="messages">
-                      <div class="alert alert alert-success alert-dismissable alert-dismissable hidden" id="msgSubmit"><button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button> Thank You! your message has been sent. </div>
+                      <div class="col-md-12">
+                        <button type="submit" data-text="Send Message" class="disabled">Odeslat</button>
+                      </div>
                     </div>
                   </div>
-                </div>
-              </form>
+                </form>
+              } @else {
+                <p>Zpáva byla úspěšně odeslána</p>
+              }
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
+  </section>
   <!-- End Contact Section -->
 
 
